tests/NormalTests/paczka1/small_fuzzy/26639192.err
Error in line 2: GbvVE4D6X S180 65,6
Error in line 3: yvv S870 63,1
Error in line 12: yvv S646 3,2
Error in line 14: yvv A639 35,1
Error in line 11: S646 S646 48,2
